Keycloak as IDP and redirect to HTML to acknowledge IDP response. * Two intent filters for redirect activity   * One for initial sign in requiring user interaction   * One for subsequent sign in attempts, while IDP session is active, because Chrome Custom Tab requires user interaction before returning to app * Redirect HTML page for subsequent sign in's

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -64,12 +64,22 @@
         -->
         <activity android:name="net.openid.appauth.RedirectUriReceiverActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="https"
-                  android:host="appauth.demo-app.io"
-                  android:path="/oauth2redirect"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http"
+                    android:host="10.0.2.2"
+                    android:port="8088"
+                    android:path="/LibraryCrawlRedirect.html"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="com.dirtroadsoftware.libraryhunt"/>
             </intent-filter>
         </activity>
     </application>
